# tracking-service

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: account.rs
kafka_producer/: Cargo.toml
kafka_producer/src/: accounts.rs  lib.rs  produce.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230628_175907_create_account.rs
service/: Cargo.toml
service/src/: lib.rs  query.rs
