[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service"}
migration = { path = "../migration"}
entity = {path = "../entity"}
kafka_producer = {path = "../kafka_producer"}
actix = "0.13.0"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
actix-web = "4.3.1"
dotenvy = "0.15.7"
listenfd = "1.0.1"
env_logger = "0.10.0"
serde_json = "1.0.99"
