[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = "0.11.3"

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
]
